# SkelAnime

./: .gitignore  CMakeLists.txt  TODO.md
data/: miku_bones.assxml  miku_bones.blend  miku_bones.blend1  miku_bones.fbx
data/reference/: miku_bones.blend  miku_bones.blend1
include/camera/: Camera.hpp  defaults.hpp
include/gui/: PropertyGUI.hpp
include/rendering/: Renderer.hpp
include/scene/: Animation.hpp  Bone.hpp  Mesh.hpp  Model.hpp  Scene.hpp  Skeleton.hpp  Vertex.hpp
include/window/: Window.hpp  defaults.hpp
lib/assimp-4.1.0/include/assimp/: config.h
lib/glfw/: cmake_install.cmake
lib/glfw/include/GLFW/: glfw3native.h
lib/glfw/src/: Makefile  cmake_install.cmake
src/: Animation.cpp  Camera.cpp  Model.cpp  PropertyGUI.cpp  Renderer.cpp  Scene.cpp  Skeleton.cpp  Window.cpp  main.cpp  shader_fragment.glsl  shader_vertex.glsl
